--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,13 @@ buildscript {
       url "https://plugins.gradle.org/m2/"
     }
   }
-  dependencies {
+//  dependencies {
 //      classpath "gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:1.6.3"
-  }
+//  }
 }
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+sourceCompatibility = "1.11"
+targetCompatibility = "1.11"
 
 configurations.all {
     // Check for updates every build
@@ -44,7 +44,7 @@ dependencies {
     compile 'commons-beanutils:commons-beanutils:1.9.2' // for commons-configuration2
     compile 'org.apache.commons:commons-lang3:3.7'
     compile 'org.slf4j:slf4j-simple:1.7.25'
-    compile 'com.squareup.okhttp3:okhttp:4.2.2'
+    compile 'org.apache.commons:commons-math3:3.5'
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
@@ -72,7 +72,7 @@ checkstyle {
 //  excludeFilter = file("config/spotbugs-exclude-filter.xml")
 //  reportLevel = "low"
 //  effort = "max"
-//  ignoreFailures = false
+//  ignoreFailures = true
 //  toolVersion = '3.1.7'
 //}
 
