add new configurations

--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -2,6 +2,7 @@ cassandra.host=localhost
 cassandra.port=9042
 cassandra.keyspace=titanccp
 cassandra.init.timeout.ms=30000
+cassandra.table.name.suffix=anomaly
 
 webserver.enable=true
 webserver.port=8888
@@ -17,3 +18,11 @@ cache.max.bytes.buffering=-1
 
 stats.host=http://localhost:8080
 config.host=http://localhost:8081
+
+webclient.pollingrate=1000
+
+# this time zone is also used by the stats-microservice
+time.zone=Europe/Paris
+
+# The number of standard deviations a record should be away from the mean to be classified as an outlier
+num.standard.deviations=3
