--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,10 +8,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout repository
+      uses: actions/checkout@v1
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Archive build artifacts
+      with:
+        name: titanccp-anomalydetection.tar
+        path: build/distributions/titanccp-anomalydetection.tar
