--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,3 +21,10 @@ jobs:
       with:
         name: titanccp-anomalydetection.tar
         path: build/distributions/titanccp-anomalydetection.tar
+    - name: Build docker image
+      run: docker build -t "industrialdevops/titan-ccp-anomalydetection:latest" . && docker save -o titanccp-anomalydetection-docker.tar industrialdevops/titan-ccp-anomalydetection:latest
+    - name: Archive docker image
+      uses: actions/upload-artifact@v1
+      with:
+        name: titanccp-anomalydetection-docker.tar
+        path: titanccp-anomalydetection-docker.tar
