added a configurable detection tolerance and simplified the anomaly detection interface

--- a/src/main/resources/META-INF/application.properties
+++ b/src/main/resources/META-INF/application.properties
@@ -19,6 +19,7 @@ cache.max.bytes.buffering=-1
 stats.host=http://localhost:8080
 config.host=http://localhost:8081
 
+# the polling rate for the statistics cache updater in milliseconds
 webclient.pollingrate=1000
 
 # this time zone is also used by the stats-microservice
@@ -26,3 +27,6 @@ time.zone=Europe/Paris
 
 # The number of standard deviations a record should be away from the mean to be classified as an outlier
 num.standard.deviations=3
+
+anomaly.tolerance=0.0
+anomaly.aggregated.tolerance=1.0
